# cmake-practice

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  compile_commands.json
cmake/: Sanitizer.cmake  Warnings.cmake
include/: glad.h
src/: glad.c  main.cpp
